[package]
name = "reqwest_inspect_json"
version = "0.0.5"
authors = ["DevNul <devnulpavel@gmail.com>"]
categories = ["web-programming::http-client"]
keywords = ["reqwest", "debug", "json"]
license = "Apache-2.0 OR MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/DevNulPavel/reqwest_inspect_json"
documentation = "https://docs.rs/crate/reqwest_inspect_json/"
description = "Reqwest extention for json response tracing"

[features]
default = []
blocking = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "~0", features = ["json"] }
serde = "~1.0"
serde_json = "~1.0"
async-trait = "~0.1"

[dev-dependencies]
tokio = { version = "0.2.24", default-features = false, features = ["macros"] }
serde = {version = "1.0.118", features = ["derive"]}
